<resources>
    <string name="app_name">Attendance Tracker</string>
    <string name="header_sign">CREATE NEW</string>
    <string name="header_sign1">ACCOUNT</string>
    <string name="header_login">WELCOME</string>
    <string name="header_login1">BACK</string>
    <string name="content">ImageView</string>
    <string name="email_hint">Email ID</string>
    <string name="pass_hint">Password</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="sign_up">CREATE ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="button_sign">REGISTER</string>
    <string name="register">CREATE ACCOUNT</string>
    <string name="forgot">Forgot Password?</string>
    <string name="success">SUCCEED</string>
    <string name="logo_name">ATTENDANCE</string>
    <string name="logo_name1">TRACKER</string>
    <string name="terms">I agree to all terms and conditions</string>
    <string name="title_activity_students_home">Students_home</string>
    <string name="tab_text_1">Lectures</string>
    <string name="tab_text_2">Practicals</string>
    <string name="tab_text_3">Overall</string>
    <string name="sub_name">SUBJECT NAME</string>
    <string name="sub_code">SUBJECT CODE ( optional )</string>
    <string name="leaves_left">LEAVES  LEFT</string>
    <string name="leaves_count">00</string>
    <string name="absent">ABSENT</string>
    <string name="absent_count">00</string>
    <string name="min_attendance">Min % Attendance Required</string>
    <string name="add_subject">ADD SUBJECT</string>
    <string name="class_start">Class Starts From:</string>
    <string name="date_format">yyyy-mm-dd</string>
    <string name="class_days">Check the class days:</string>
    <string name="day1">M</string>
    <string name="day2">T</string>
    <string name="day3">W</string>
    <string name="day4">T</string>
    <string name="day5">F</string>
    <string name="day6">S</string>
    <string name="min">00</string>
    <string name="info">All these information cannot be edit further</string>
</resources>