<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login"
        tools:context=".LoginStudents">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="58dp"
            android:background="@drawable/logo_final"
            android:contentDescription="@string/content"
            android:scaleType="center"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/frame_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="237dp"
            android:fontFamily="@font/cairo"
            android:gravity="center|start"
            android:text="@string/logo_name"
            android:textColor="#EEEEEE"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="65dp"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/coda"
            android:gravity="center|start"
            android:text="@string/logo_name1"
            android:textColor="#EEEEEE"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/frame_login"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:orientation="vertical"
            android:layout_marginTop="270dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.934">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/cairo"
                android:text="@string/header_login"
                android:layout_gravity="end"
                android:gravity="bottom"
                android:textColor="#cccccc"
                android:textSize="24sp" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="50dp"
                android:fontFamily="@font/coda"
                android:gravity="top"
                android:text="@string/header_login1"
                android:layout_marginEnd="50dp"
                android:layout_gravity="end"
                android:textColor="#eeeeee"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/design_login"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#CCCCCC"
                    android:contentDescription="@string/content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_box1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginStart="10dp"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_id1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="start|center"
                        android:hint="@string/email_hint"
                        android:textColor="#E6E6E6" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/design_login"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="#CCCCCC"
                    android:contentDescription="@string/content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_box1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginStart="10dp"
                    app:errorEnabled="true"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="start|center"
                        android:hint="@string/pass_hint"
                        android:textColor="#E6E6E6" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="35dp"
                android:layout_marginStart="10dp"
                android:layout_gravity="end"
                android:text="@string/forgot"
                android:textColor="#EEEEEE"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/button_end"
                    android:drawableEnd="@drawable/double_arrow"
                    android:drawablePadding="15dp"
                    android:gravity="center|end"
                    android:text="@string/login"
                    android:textColor="#EEEEEE"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/register_text"
                    android:layout_width="140dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="30dp"
                    android:fontFamily="@font/coda"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="#EEEEEE"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/progress_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

